--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
 
 <head>
-    <title>Black Hole</title>
+    <title>Gestured Hollow</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />    
     <script src="p5.js"></script>
+    <script src="https://unpkg.com/ml5@0.4.2/dist/ml5.min.js"></script>
+    <link rel="stlesheet" href="style.css">
     <script src="p5.sound.js"></script>  
     <script src="clmtrackr.js"></script>  
     <script src="sketch.js"></script>
