--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <script src="p5.js"></script>
     <script src="https://unpkg.com/ml5@0.4.2/dist/ml5.min.js"></script>
     <link rel="stlesheet" href="style.css">
-    <script src="p5.sound.js"></script>  
-    <script src="clmtrackr.js"></script>  
+    <!-- <script src="p5.sound.js"></script>   -->
+    <!-- <script src="clmtrackr.js"></script>   -->
     <script src="sketch.js"></script>
     <style type="text/css">
         html, body {
