--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Bitcoin Exchange Monitor</title>
+    <title>Silicon Wet Dream Beta</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />    
     <script src="p5.js"></script>
     <script src="https://unpkg.com/ml5@0.4.2/dist/ml5.min.js"></script>
@@ -15,6 +15,9 @@
             height: 100%;
             margin: 0;
             padding: 0;
+            background-image: url("a.gif");
+            background-repeat: no-repeat;
+            background-size: cover;
             touch-action: none;
             overflow: hidden;  Hide scrollbars 
 
@@ -23,6 +26,14 @@
 </head>
 
 <body>
+
+    <h1 style = "font-size: 500%; font-family: 'courier new'; color: white;">
+
+<!--         beginShape();
+        {The Matrix; The Social Network; Tron; Ideologues of silicon valley. My own inspirations, all told; ideology I insufferably bathe in - but I suppose I'm not alone, as we all stop in our critique of ideology at some point. It's then I'm reminded of <i>They Live</i> - we like ideology - it distorts reality to give us something that pleases - we are soaking wet in our dreams, even the pretentious postmodern a-truthers. Who wrote your smut?.....} 
+        endShape(); -->
+
+    </h1>
 
 </body>
 
