--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 
     <h1 style = "font-size: 500%; font-family: 'courier new'; color: white;">
 
-<!--         beginShape();
+        beginShape();
         {The Matrix; The Social Network; Tron; Ideologues of silicon valley. My own inspirations, all told; ideology I insufferably bathe in - but I suppose I'm not alone, as we all stop in our critique of ideology at some point. It's then I'm reminded of <i>They Live</i> - we like ideology - it distorts reality to give us something that pleases - we are soaking wet in our dreams, even the pretentious postmodern a-truthers. Who wrote your smut?.....} 
-        endShape(); -->
+        endShape();
 
     </h1>
 
