--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             height: 100%;
             margin: 0;
             padding: 0;
-            background-image: url("a.gif");
+            /*background-image: url("a.gif");*/
             background-repeat: no-repeat;
             background-size: cover;
             touch-action: none;
@@ -27,8 +27,8 @@
 
 <body>
 
-    <h1 style = "font-size: 500%; font-family: 'courier new'; color: white;">
-
+    <h1 style = "font-size: 250%; font-family: 'courier new'; color: white;">
+        <br>
         beginShape();
         {The Matrix; The Social Network; Tron; Ideologues of silicon valley. My own inspirations, all told; ideology I insufferably bathe in - but I suppose I'm not alone, as we all stop in our critique of ideology at some point. It's then I'm reminded of <i>They Live</i> - we like ideology - it distorts reality to give us something that pleases - we are soaking wet in our dreams, even the pretentious postmodern a-truthers. Who wrote your smut?.....} 
         endShape();
